# TaxiSystem

./: CMakeLists.txt  main.cpp
domain/: classic_taxi.cpp  classic_taxi.h  passenger.cpp  passenger.h  route.cpp  route.h  station.cpp  station.h  taxi_base.h
logic/: town_logic.cpp  town_logic.h
